--- a/yaml/hello-world-map.yml
+++ b/yaml/hello-world-map.yml
@@ -1,21 +1,11 @@
 ---
-apiVersion: getambassador.io/v2
-kind: Mapping
+apiVersion: x.getambassador.io/v3alpha1
+kind: AmbassadorMapping
 metadata:
   name: hello
   namespace: test
-  labels:
-    public-api: "false"    ## labels for matching only some Mappings
-    documented: "false"    ## (note that "true" must be quoted)
 spec:
   prefix: /hello/
-  # host: aes-demo.com
+  hostname: emojivoto.se02.mturner.k736.net
   service: hello.test:80
-  docs:
-    docs:
-    url: https://api.swaggerhub.com/apis/matt-aes/hello-world/1.0.0/swagger.json
-  labels:
-    ambassador:
-      - request_label:
-        - 3rph
 ---
