--- a/yaml/hello-world-dep.yml
+++ b/yaml/hello-world-dep.yml
@@ -14,7 +14,7 @@ spec:
   template:
     metadata:
       annotations:
-        config.linkerd.io/skip-outbound-ports: "8081,8022,6001"  # Only needed for Telepresence in Linkerd mesh
+        telepresence.getambassador.io/inject-traffic-agent: enabled
       labels:
         app: hello
     spec:
